fix double scroll bar styles issue

--- a/src/webparts/goodsIssueFlow/components/gilistview/GIListView.module.scss
+++ b/src/webparts/goodsIssueFlow/components/gilistview/GIListView.module.scss
@@ -2,16 +2,16 @@
   background-color: #f0f0f0;
   // min-height: 65vh;
   /* Firefox */
-  min-height: -moz-calc(100vh - 234px);
+  min-height: -moz-calc(100vh - 280px);
   /* WebKit */
-  min-height: -webkit-calc(100vh - 234px);
+  min-height: -webkit-calc(100vh - 280px);
   /* Opera */
-  min-height: -o-calc(100vh - 234px);
+  min-height: -o-calc(100vh - 280px);
   /* Standard */
-  min-height: calc(100vh - 234px);
+  min-height: calc(100vh - 280px);
 
   min-width: 94vw;
-  overflow: scroll;
+  // overflow: scroll;
   overflow-x: inherit;
 }
 .list {
